--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,24 @@ body{
   background-image: url("https://wallpapercave.com/wp/gKFxXrk.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+ font-family: 'Gloria Hallelujah', cursive;
+}
+.container h1{
+  color: white;
+  font-size: 60px;
+}
+.container p{
+  color:black;
+  font-size: 50px;
+}
+.button{
+  font-size: 40px;
+  color: red;
+}
+.jumbotron{
+  opacity: 0.4;
+}
+.container .jumbotron {
+ display:flex;
+ justify-content: space-around;
 }
