--- a/css/styles.css
+++ b/css/styles.css
@@ -23,3 +23,18 @@ body{
  display:flex;
  justify-content: space-around;
 }
+#you{
+float: left;
+}
+#computer{
+  float: right;
+}
+.player{
+  display:none;
+}
+.player #you p{
+  color:white;
+}
+.player #computer p{
+  color:white;
+}
