--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body{
   background-image: url("https://wallpapercave.com/wp/gKFxXrk.jpg");
   background-size: cover;
   background-repeat: no-repeat;
- font-family: 'Gloria Hallelujah', cursive;
+  font-family: 'Caveat', cursive;
 }
 .container h1{
   color: white;
@@ -23,8 +23,22 @@ body{
  display:flex;
  justify-content: space-around;
 }
-.player{
-  display:none;
+.col-md-4{
+  /* display:none; */
+  background-color: black;
+  opacity: 0.7;
+}
+.col-md-4 p {
+  font-size: 20px;
+  color:white;
+}
+.col-md-5 p {
+  font-size: 20px;
+  color:white;
+.col-md-5{
+  /* display:none; */
+  background-color: black;
+  opacity: 0.7;
 }
 .player #you p{
   color:white;
@@ -38,11 +52,17 @@ body{
   color:white;
   font-size: 40px;
 }
-.panel .roll{
-  font-size:40px;
+.col-md-8 .roll{
+  font-size:20px;
 }
-.panel .hold{
-  font-size: 40px;
+.col-md-8 .hold{
+  font-size: 20px;
+}
+.col-md-4 .hold{
+  font-size:20px;
+}
+.col-md-4 .roll{
+  font-size:20px;
 }
 
 .panel{
