--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ body{
 }
 .button{
   font-size: 40px;
-  color: red;
+  color: black;
 }
 .jumbotron{
   opacity: 0.4;
@@ -25,8 +25,6 @@ body{
 }
 .col-md-4{
   display:none;
-  background-color: white;
-  opacity: 0.7;
 }
 .player #you .row .col-md-4 p {
   font-size: 20px;
@@ -38,8 +36,6 @@ body{
 }
 .col-md-5{
   display:none;
-  background-color: white;
-  opacity: 0.7;
 }
 .player{
   display: flex;
@@ -53,16 +49,16 @@ body{
   color:white;
   font-size: 40px;
 }
-.col-md-8 .roll{
+.container .player #computer .col-md-8 .oll{
   font-size:20px;
 }
-.col-md-8 .hold{
+.container .player #computer.col-md-8 .old{
   font-size: 20px;
 }
-.col-md-4 .hold{
+.container .player #you .col-md-4 .hold{
   font-size:20px;
 }
-.col-md-4 .roll{
+.container .player #you .col-md-4 .roll{
   font-size:20px;
 }
 
